--- a/desafios/d012/style.css
+++ b/desafios/d012/style.css
@@ -1,98 +1,86 @@
-@charset "pt-br";
-@import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700;900&family=Sriracha&display=swap');
+@charset "UTF-8";
+@import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700;900&family=Sriracha&display=swap'); /*importando as fontes do googlefonts*/
 
-:root{
+:root{ /*configurando as variáveis*/
     --fonte-titulo: "Passion One", sans-serif;
     --fonte-padrao: "Sriracha", cursive;
 }
-header{
+* { /*configurações globais*/
+    margin: 0px;
+    padding: 0px;
+    font-size: 1em;
+}
+html, body{ /*configurando o html e o corpo*/
+    min-height: 100vh; /*usa 100% da view height*/
+    background-color: darkgray;
+}
+header{ /*configurando o cabeçalho*/
     background-color: black;
     color: white;
     text-align: center;
 }
-header > h1{
+header > h1{/*configurando o h1 do cabeçalho*/
     font-family: var(--fonte-titulo);
-    font-size: 6em;
-    font-variant: small-caps;
-    margin: auto;  
+    font-size: 10vw; /*10% da view whidth*/
+    font-variant: small-caps; /*todas as letras maiúsculas com a primeira de cada palavra maior*/
     padding-top: 50px;
 }
-header > p {
+header > p { /*config. pagagrafo do cabeçalho*/
     padding-bottom: 50px;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
-header a{
+header a, footer a{/*config. links do cabeçalho e rodapé*/
     color: white;
     text-decoration: none;
     font-weight: bold;
+    
 }
-header a:hover{
+header a:hover, footer a:hover{
     text-decoration: underline;
 }
-section.normal{
+section{ /*config. geral do section(aplicado a todas as sections)*/
+    padding-top: 10vh;
+    padding-bottom: 10vh;
+    line-height: 2em;
+    padding-left: 30px;
     font-family: var(--fonte-padrao);
-    font-size: 2em;
-    padding-left: 20px;
-    margin: 100px 0px 100px 0px;
+    font-size: 3.5vw;
 }
-section.imagem#img1{ 
-    position: relative;
-    font-family: var(--fonte-padrao);
-    font-size: 2em;
-    padding-left: 20px;
-    background-color: green;
+section >p{
+    padding-bottom: 2em;
+}
+section.normal{/*section classe normal*/
+    background-color: white;
+    color: black;
+    
+}
+section.imagem{ /*section classe imagem*/
+    background-color: rgb(51,51,51);
+    color: white;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.562);
+    background-size: cover;
+    background-attachment: fixed;
+
+}
+section.imagem > p {
+    background-color: rgba(0, 0, 0, 0.459);
+    display: inline-block;
+    padding: 10px;
+    text-shadow: 1px 1px 0px black;
+
+}
+section#img01{
     background-image: url(imagens/background001.jpg);
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-attachment: fixed;
-    height: 700px;
-
+    background-position: right, center;
 }
-    #img1 > p{
-    position: absolute;
-    color: white;
-    background-color: rgba(0, 0, 0, 0.397);
-    border-radius: 5px;
-    padding: 10px;
-    top: 10%;
-    font-size: 1em;
-
-}
-section.imagem#img2{ 
-    position: relative;
-    font-family: var(--fonte-padrao);
-    font-size: 2em;
-    padding-left: 20px;
-    background-color: green;
+section#img02{
     background-image: url(imagens/background002.jpg);
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-attachment: fixed;
-    height: 700px;
+    background-position: right, center;
 
-}
-section.imagem#img2> p{
-    position: absolute;
-    color: white;
-    background-color: rgba(0, 0, 0, 0.397);
-    border-radius: 5px;
-    padding: 10px;
-    top: 10%;
-    font-size: 1em;
 }
 footer{
     background-color: black;
     color: white;
     text-align: center;
-    padding: 1px;
-}
-footer a {
-    color: white;
-    text-decoration: none;
-    font-weight: bold;
-}
-footer a:hover{
-    text-decoration: underline;
+    padding: 10px;
 }
